Implementa cálculo de frete grátis com base em proteína 500g
Implementa lógica para calcular o progresso do frete grátis com base na quantidade de proteínas de 500g no carrinho.
Inclui suporte para texto singular/plural.
Refatora mensagens de texto para melhorar a clareza.
Corrige o teste de integração.

--- a/snippets/global-script.liquid
+++ b/snippets/global-script.liquid
@@ -144,7 +144,9 @@
             free_shipping_message: `{{ 'calculator_free_shipping_message.general.free_shipping_message' | t }}`,
             free_shipping_message_1: `{{ 'calculator_free_shipping_message.general.free_shipping_message_1' | t }}`,
             free_shipping_message_2:`{{ 'calculator_free_shipping_message.general.free_shipping_message_2' | t }}`,
+            free_shipping_message_2_singular: `{{ 'calculator_free_shipping_message.general.free_shipping_message_2_singular' | t }}`,
             free_shipping_message_3: `{{ 'calculator_free_shipping_message.general.free_shipping_message_3' | t }}`,
+            free_shipping_message_3_singular: `{{ 'calculator_free_shipping_message.general.free_shipping_message_3_singular' | t }}`,
             free_shipping_message_4: `{{ 'calculator_free_shipping_message.general.free_shipping_message_4' | t }}`,
             free_shipping_1: `{{ 'calculator_free_shipping_message.general.free_shipping_1' | t }}`,
             free_shipping_2: `{{ 'calculator_free_shipping_message.general.free_shipping_2' | t }}`
